kubernetes/apps/flux/instance/webhook/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
spec:
  hostnames: ["flux-webhook.${CLUSTER_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: frecklesystems-https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
