kubernetes/apps/flux/instance/webhook/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook-funnel
  namespace: flux-system
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/tags: "tag:public-webhook"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - ${CLUSTER_NAME}-flux-webhook
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
